--- a/TODO
+++ b/TODO
@@ -1,2 +1,1 @@
-- finish vdirsyncer to sync contacts
-- see if we can vdirsyncer into aerc for autocompletion
+- URGENT: fix msmtp dns with wireguard
